src/objects/Legislation__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether we are currently tracking this bill</description>
        <inlineHelpText>Whether we are currently tracking this bill</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>unique id for congress</inlineHelpText>
        <label>Bill_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <description>Just the numerical part of the bill or amendment number.</description>
        <inlineHelpText>Just the numerical part of the bill or amendment number.</inlineHelpText>
        <label>Bill Number</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prefix__c</fullName>
        <description>Bill prefix corresponding to bill title, e.g. &quot;HR&quot; for HR1212</description>
        <inlineHelpText>Bill prefix corresponding to bill title, e.g. &quot;HR&quot; for HR1212</inlineHelpText>
        <label>Bill Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HJRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SJRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCRES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAMDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAMDT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Title__c</fullName>
        <description>Title of proposed bill.  Leave out Bill Number (e.g. HR3254), which should go into Bill Number field.</description>
        <inlineHelpText>Title of proposed bill.  Leave out Bill Number (e.g. HR3254), which should go into Bill Number field.</inlineHelpText>
        <label>Bill Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI Bill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Congressional_Session__c</fullName>
        <description>E.g. for the 112th congress select 112.  Must be filled in for Thomas link to work.</description>
        <inlineHelpText>E.g. for the 112th congress select 112.  Must be filled in for Thomas link to work.</inlineHelpText>
        <label>Congressional Session</label>
        <picklist>
            <picklistValues>
                <fullName>112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>109</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cosponsors__c</fullName>
        <label>Cosponsors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Bill_Info_Updated__c</fullName>
        <description>When bill info was last pulled in from GovTrack</description>
        <inlineHelpText>When bill info was last pulled in from GovTrack</inlineHelpText>
        <label>Date Bill Info Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the bill should appear in the DC section of the website.</description>
        <inlineHelpText>Whether the bill should appear in the DC section of the website.</inlineHelpText>
        <label>Display on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Bill_Number__c</fullName>
        <description>Combination of prefix and number, e.g. HR5322</description>
        <formula>text( Bill_Prefix__c ) + text( Bill_Number__c )</formula>
        <inlineHelpText>Combination of prefix and number, e.g. HR5322</inlineHelpText>
        <label>Full Bill Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduced_Date__c</fullName>
        <description>Date the bill was introduced</description>
        <inlineHelpText>Date the bill was introduced</inlineHelpText>
        <label>Introduced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introduced__c</fullName>
        <label>Introduced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Major_Action__c</fullName>
        <label>Latest Major Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legislative_Body__c</fullName>
        <label>Legislative Body</label>
        <picklist>
            <controllingField>Bill_Prefix__c</controllingField>
            <picklistValues>
                <fullName>House</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Senate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Body</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_Info__c</fullName>
        <label>Sponsor Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legislation</relationshipLabel>
        <relationshipName>Legislation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_in_Congress__c</fullName>
        <label>Status in Congress</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>CRS Summary</description>
        <inlineHelpText>CRS Summary</inlineHelpText>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>THOMAS_link__c</fullName>
        <description>Link to THOMAS description of bill.  Only works if Bill Name and Congressional Session are filled in.</description>
        <formula>if(
  or(isblank(text(Congressional_Session__c)),
      isblank(text( Bill_Prefix__c )),
      isblank(text(Bill_Number__c))
  ),
&quot;Choose a value for Bill Prefix, Bill Number, and Congressional Session&quot;,
HYPERLINK(&quot;http://hdl.loc.gov/loc.uscongress/legislation.&quot; + text(Congressional_Session__c) +  LOWER(text(Bill_Prefix__c)) + text(Bill_Number__c) , &quot;View in THOMAS&quot;, &quot;_blank&quot;))</formula>
        <inlineHelpText>Link to THOMAS description of bill.  Only works if Bill Name and Congressional Session are filled in.</inlineHelpText>
        <label>THOMAS link</label>
        <type>Text</type>
    </fields>
    <label>Legislation</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Full_Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Latest_Major_Action__c</columns>
        <columns>Date_Bill_Info_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Legislation</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Full_Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>Latest_Major_Action__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legislation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>